--- a/index.html
+++ b/index.html
@@ -319,16 +319,7 @@
         </li>
       </ul>
       <img src="img/icon.png" alt="Logo" class="footer__logo" />
-      <p class="footer__copyright">
-        &copy; Copyright by
-        <a
-          class="footer__link twitter-link"
-          target="_blank"
-          href="https://twitter.com/jonasschmedtman"
-          >Jonas Schmedtmann</a
-        >. Use for learning or your portfolio. Don't use to teach. Don't claim
-        as your own product.
-      </p>
+      <p class="footer__copy">&copy; 2024 Bankist. All rights reserved.</p>
     </footer>
 
     <div class="modal hidden">
